Do not explicitly specify proxy
This will make the connection use the proxy settings of the system.